--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-Flask==2.0.2
-Flask-Bootstrap==3.3.7.1
-requests==2.26.0
+Flask==2.0.1
+requests==2.25.1
+beautifulsoup4==4.9.3
+flask-bootstrap==3.3.7.1
+gunicorn==20.1.0
