--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.0.1
-requests==2.26.0
-Flask-Bootstrap==3.3.7.1
+flask-bootstrap==3.3.7.1
+undetected-chromedriver==3.0.3
 curlify==2.2.1
 gunicorn==20.1.0
+
