--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.0.1
-flask-bootstrap==3.3.7.1
-undetected-chromedriver==3.0.3
+Flask==1.1.4
+Flask-Bootstrap==3.3.7.1
+undetected-chromedriver==2.2.2
 curlify==2.2.1
+selenium==3.141.0
 gunicorn==20.1.0
+
