--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Flask==1.1.4
-Flask-Bootstrap==3.3.7.1
+Flask
+Flask-Bootstrap
 undetected-chromedriver
-curlify==2.2.1
-selenium==3.141.0
-gunicorn==20.1.0
+curlify
+selenium
 markupsafe
 jinja2
+gunicorn
+
 
 
 
