--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,6 @@
-Flask
-Flask-Bootstrap
-undetected-chromedriver
-curlify
-selenium
-markupsafe
+fastapi
+uvicorn
+httpx
 jinja2
-gunicorn
-aiohttp
-beautifulsoup4
-
-
-
-
-
-
-
-
+parsel
+nested-lookup
