--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 gunicorn
+pymongo
+json
+python-dotenv
+os
+time
+random
+logging
+fake-useragent
+datetime
+http.client
 flask
 requests
-json5
 flask-bootstrap
 curlify
-
-
-
-# scraper
-requests
-pymongo
-python-dotenv
-fake_useragent
+bson
+operator
+plotly
+pandas
+pycountry
